--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,9 @@
 										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> français </a>
 									</li>
 									<li>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Español </a>
+									</li>
+									<li>
 										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 繁体中文 </a>
 									</li>
 								</ul>
@@ -143,6 +146,7 @@
 							<a href="">русский</a>
 							<a href="">Deutsche</a>
 							<a href="">français</a>
+							<a href="">Español</a>
 							<a href="">繁体中文</a>
 						</div>
 					</div>
@@ -296,14 +300,12 @@
 			</section>
 
 			<!-- below line -->
-			<section class="container flex flex-col space-y-1 pl-6 md:pl-0 pb-5 mx-auto">
-				<div>
+			<section class="flex flex-col md:flex-row md:justify-between md:items-end space-y-1 md:space-y-0 pl-6 md:pl-0 pb-5">
+				<div class="flex flex-col md:pl-[5%]">
 					<p class="">A PlayCover Team Product</p>
+					<a href="/legal-notice/" class="underline text-left inline pb-1 pt-2 md:pt-1 md:pb-0">Legal Notice</a>
 				</div>
-				<div class="flex flex-col md:flex-row justify-between">
-					<a href="/legal-notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notice</a>
-					<p class="inline md:text-right">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
-				</div>
+				<p class="inline md:pr-[5%]">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 			</section>
 		</footer>
 
