--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -79,6 +79,9 @@
 										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> français </a>
 									</li>
 									<li>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Español </a>
+									</li>
+									<li>
 										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 繁体中文 </a>
 									</li>
 								</ul>
@@ -143,6 +146,7 @@
 							<a href="">русский</a>
 							<a href="">Deutsche</a>
 							<a href="">français</a>
+							<a href="">Español</a>
 							<a href="">繁体中文</a>
 						</div>
 					</div>
@@ -157,14 +161,14 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
-				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-1">
+				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
 					<p>Legal</p>
 					<p>Notice</p>
 				</span>
 			</header>
 
 			<!-- paras -->
-			<section class="px-52 pt-20 space-y-16 text-gray-700 dark:text-gray-300">
+			<section class="px-10 lg:px-52 pt-20 space-y-16 text-gray-700 dark:text-gray-300">
 				<section class="space-y-3">
 					<h2 class="font-medium text-2xl">Copyright Notice</h2>
 					<div class="pl-5 pt-2">
@@ -178,8 +182,8 @@
 					<h2 class="font-medium text-2xl">Trademark Statement</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All trademarks and marks used and displayed on this website belong to [Profispieler] and are protected by the Trademark Law of the People's Republic of China, the Anti Unfair Competition Law of the People's Republic of China and relevant international conventions.</li>
-							<li>Without prior written permission of [Profispieler] , trademarks, marks and software names of [Profispieler] shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and [Profispieler] reserves the right to pursue legal responsibilities.</li>
+							<li>All trademarks and marks used and displayed on this website belong to [Profispieler] [云玩家] and are protected by the Trademark Law of the People's Republic of China, the Anti Unfair Competition Law of the People's Republic of China and relevant international conventions.</li>
+							<li>Without prior written permission of [Profispieler] [云玩家] , trademarks, marks and software names of [Profispieler] [云玩家] shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and [Profispieler] [云玩家] reserves the right to pursue legal responsibilities.</li>
 						</ul>
 					</div>
 				</section>
@@ -289,14 +293,12 @@
 			</section>
 
 			<!-- below line -->
-			<section class="container flex flex-col space-y-1 pl-6 md:pl-0 pb-5 mx-auto">
-				<div>
+			<section class="flex flex-col md:flex-row md:justify-between md:items-end space-y-1 md:space-y-0 pl-6 md:pl-0 pb-5">
+				<div class="flex flex-col md:pl-[5%]">
 					<p class="">A PlayCover Team Product</p>
+					<a href="/legal-notice/" class="underline text-left inline pb-1 pt-2 md:pt-1 md:pb-0">Legal Notice</a>
 				</div>
-				<div class="flex flex-col md:flex-row justify-between">
-					<a href="/legal-notices/" class="underline text-left inline pb-1 pt-2 md:pt-0 md:pb-0">Legal Notice</a>
-					<p class="inline md:text-right">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
-				</div>
+				<p class="inline md:pr-[5%]">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
 			</section>
 		</footer>
 
