--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="this is my site description" />
+		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
 		<title>PlayCover</title>
 		<link href="../css/styles.css" rel="stylesheet" />
