--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
 		<!-- content -->
 		<main>
 			<!-- hero section -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-36 3xl:space-x-54 pt-28 pb-4 md:pb-10 lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-16 3xl:space-x-54 pt-28 pb-4 md:pb-6 lg:mt-auto">
 				<!-- text -->
 				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
@@ -181,7 +181,7 @@
 						<h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 
 						<!-- hero text -->
-						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">An app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
+						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">allows you to run iOS apps on your Mac in fullscreen with Mouse, Keyboard & Controller.</p>
 
 						<!-- Download buttons -->
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
@@ -203,7 +203,7 @@
 					</div>
 
 					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[14rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.0)</h2>
 
@@ -222,11 +222,13 @@
 				<div id="hero-image">
 					<div class="group relative">
 						<!-- bg gradient -->
-						<div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div>
+						<!-- <div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div> -->
 
-						<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="../assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<!-- <img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="../assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="../assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="../assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" /> -->
+
+						<img class="max-w-s md:max-w-3xl rounded-lg" src="assets/hero-image.png" alt="macbook with gameplay" />
 					</div>
 				</div>
 			</section>
